[package]
name = "hms-mqtt-publish"
version = "0.2.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
env_logger = "0.11.2"
hms2mqtt = { path = "hms2mqtt" }
log = "0.4.20"
rumqttc = "0.23.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
toml = "0.8.10"
rustls-native-certs = "0.7.0"

[package.metadata.cargo-machete]
ignored = ["serde"]