[package]
name = "hms2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
crc16 = "0.4.0"
log = "0.4.20"
protobuf = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.193"
chrono = "0.4.31"

[build-dependencies]
protobuf-codegen = "3.3.0"
