[package]
name = "hms2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crc16 = "0.4.0"
log = "0.4.22"
protobuf = "3.5.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
serde_derive = "1.0.209"
chrono = "0.4.38"

[build-dependencies]
protobuf-codegen = "3.5.1"
