[package]
name = "hms2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
crc16 = "0.4.0"
log = "0.4.25"
protobuf = "3.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_derive = "1.0.217"
chrono = "0.4.39"

[build-dependencies]
protobuf-codegen = "3.7.1"
